load("@python_3_11//:defs.bzl", py_binary_3_11 = "py_binary")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_library(
    name = "my_lib",
    srcs = [
        "test_lib.py"
    ]
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":my_lib"
    ]
)

py_binary_3_11(
    name = "main_3_11",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":my_lib"
    ]
)